<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#BFDADD"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#0A0000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userid"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#BFDADD"
        android:ems="10"
        android:foregroundTint="#00ACC1"
        android:hint="@string/userid"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintitle" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#BFDADD"
        android:ems="10"
        android:foregroundTint="#72A8AF"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#00050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userid" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword" />

    <EditText
        android:id="@+id/loginhint"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#BFDADD"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login_hint"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <Button
        android:id="@+id/signup"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/signup"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginhint" />

    <EditText
        android:id="@+id/support"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#BFDADD"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/emailus"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

</androidx.constraintlayout.widget.ConstraintLayout>