<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/manager_home_title"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="234dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#BFDADD"
        android:text="@string/welcome_message_manager"
        android:textAlignment="center"
        android:textColor="#0A0000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manager_view_employee"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="252dp"
        android:text="@string/view_employees"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manager_prepare_schedule" />

    <Button
        android:id="@+id/manager_prepare_schedule"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="412dp"
        android:text="@string/prepare_schedule"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manager_home_title" />


</androidx.constraintlayout.widget.ConstraintLayout>